--- a/tennis-game.html
+++ b/tennis-game.html
@@ -22,7 +22,7 @@ body{
 <body>
 <div id="container">
     <img class='img' src="https://i.ytimg.com/vi/ynB6qR8tpvY/maxresdefault.jpg" alt="" />
-	<canvas id="gameCanvas" width="800" height="600"></canvas> //example, just for seeing the image
+	<canvas id="gameCanvas" width="800" height="600"></canvas> 
 //<canvas id="gameCanvas" width="1500" height="720"></canvas>
 </div>
 
